--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Functional programming in JS</title>
+    <title>Functional programming in JavaScript</title>
 
     <meta name="description" content="">
     <meta name="author" content="Adam Zamozniewicz @ Cognifide">
@@ -44,7 +44,7 @@
     <div class="slides">
 
         <section>
-            <h1>Functional programming in JS</h1>
+            <h1>Functional programming in JavaScript</h1>
         </section>
 
         <section class="stack">
